--- a/frontend/src/app/profile/component/profile.html
+++ b/frontend/src/app/profile/component/profile.html
@@ -45,7 +45,7 @@
                 </svg>
                 Report User
             </button>
-            <button class="btn btn-admin-action" *ngIf="isAdmin" (click)="adminBanUser(profileRes.uuid)">
+            <button class="btn btn-admin-action" *ngIf="isAdmin" (click)="onPrepareAdminBanUser()">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 16 16">
                     <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
                     <path d="M11.354 4.646a.5.5 0 0 0-.708 0l-6 6a.5.5 0 0 0 .708.708l6-6a.5.5 0 0 0 0-.708" />
@@ -110,6 +110,46 @@
                             d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0M8 4a.905.905 0 0 0-.9.995l.35 3.507a.552.552 0 0 0 1.1 0l.35-3.507A.905.905 0 0 0 8 4m.002 6a1 1 0 1 0 0 2 1 1 0 0 0 0-2" />
                     </svg>
                     Yes, Submit Report
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <!-- Admin Ban User Confirmation Dialog -->
+    <div *ngIf="showAdminBanConfirmation" class="confirmation-overlay" (click)="onCancelAdminBanUser()">
+        <div class="confirmation-dialog" (click)="$event.stopPropagation()">
+            <div class="confirmation-icon ban-icon">
+                <svg xmlns="http://www.w3.org/2000/svg" width="48" height="48" fill="currentColor" viewBox="0 0 16 16">
+                    <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                    <path d="M11.354 4.646a.5.5 0 0 0-.708 0l-6 6a.5.5 0 0 0 .708.708l6-6a.5.5 0 0 0 0-.708" />
+                </svg>
+            </div>
+            <h3 class="confirmation-title" *ngIf="profileRes?.status === 'ACTIVE'">Ban User?</h3>
+            <h3 class="confirmation-title" *ngIf="profileRes?.status === 'BAN'">Unban User?</h3>
+            <p class="confirmation-message" *ngIf="profileRes?.status === 'ACTIVE'">
+                Are you sure you want to ban <strong>{{profileRes.firstName}} {{profileRes.lastName}}</strong> (@{{profileRes.username}})? This will prevent them from accessing the platform.
+            </p>
+            <p class="confirmation-message" *ngIf="profileRes?.status === 'BAN'">
+                Are you sure you want to unban <strong>{{profileRes.firstName}} {{profileRes.lastName}}</strong> (@{{profileRes.username}})? This will restore their access to the platform.
+            </p>
+            <div class="confirmation-actions">
+                <button class="btn-confirmation-cancel" (click)="onCancelAdminBanUser()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                        <path
+                            d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708" />
+                    </svg>
+                    Cancel
+                </button>
+                <button class="btn-confirmation-confirm btn-ban-confirm" (click)="onConfirmAdminBanUser()">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
+                        viewBox="0 0 16 16">
+                        <path d="M8 15A7 7 0 1 1 8 1a7 7 0 0 1 0 14m0 1A8 8 0 1 0 8 0a8 8 0 0 0 0 16" />
+                        <path d="M11.354 4.646a.5.5 0 0 0-.708 0l-6 6a.5.5 0 0 0 .708.708l6-6a.5.5 0 0 0 0-.708" />
+                    </svg>
+                    <span *ngIf="profileRes?.status === 'ACTIVE'">Yes, Ban User</span>
+                    <span *ngIf="profileRes?.status === 'BAN'">Yes, Unban User</span>
                 </button>
             </div>
         </div>
